--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+anthropic
 crewai
 crewai[tools]
-openai==1.33.0
-pinecone-client==3.2.2
+openai==1.35.7
+pinecone-client==4.1.1
 python-dotenv==1.0.0
 uuid
 pathlib
